--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "9.0.2",
-    "@semantic-release/release-notes-generator": "10.0.3",
     "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/commit-analyzer": "9.0.2",
+    "@semantic-release/git": "10.0.1",
     "@semantic-release/github": "8.0.4",
-    "@semantic-release/git": "10.0.1"
+    "@semantic-release/release-notes-generator": "10.0.3"
   },
   "engines": {
     "node": "16.15"
+  },
+  "dependencies": {
+    "semantic-release": "^19.0.3"
   }
 }
