--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "devDependencies": {
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "9.0.2",
-    "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "8.0.7",
-    "@semantic-release/release-notes-generator": "10.0.3"
-  },
   "engines": {
     "node": "18.16"
   },
   "dependencies": {
-    "semantic-release": "20.1.3"
+    "npm": "9.6.4",
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/commit-analyzer": "9.0.2",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "8.0.7",
+    "@semantic-release/release-notes-generator": "10.0.3",
+    "semantic-release": "21.0.1"
   }
 }
